--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>TEQRA | Zero Point</title>
+<title>TEQRA | Planetary Core</title>
 
 <style>
 :root{
-  --instability:0;
-  --dx:0px;
-  --dy:0px;
-  --rot:0deg;
-  --ab:0px;
+  --entropy:0;
+  --shakeX:0px;
+  --shakeY:0px;
+  --rotate:0deg;
+  --pulse:1;
 }
 
 *{
@@ -23,106 +23,142 @@
 }
 
 body{
-  background:#050505;
+  background:#070809;
   height:100vh;
   overflow:hidden;
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:monospace;
-  color:rgba(255,255,255,.6);
+  font-family:system-ui, sans-serif;
+  color:rgba(255,255,255,.75);
 }
 
-#world{
-  width:100vw;
-  height:100vh;
+#universe{
+  position:absolute;
+  inset:0;
   display:flex;
   justify-content:center;
   align-items:center;
   transform:
-    translate(var(--dx),var(--dy))
-    rotate(var(--rot));
+    translate(var(--shakeX),var(--shakeY))
+    rotate(var(--rotate));
 }
 
 .vignette{
   position:fixed;
   inset:0;
-  background:radial-gradient(circle,transparent 30%,#000 90%);
+  background:radial-gradient(circle,transparent 35%,#000 90%);
+  opacity:calc(.25 + var(--entropy));
   pointer-events:none;
-  opacity:calc(.3 + var(--instability));
 }
 
-.grain{
+.noise{
   position:fixed;
   inset:0;
-  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='.15'/%3E%3C/svg%3E");
+  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='.2'/%3E%3C/svg%3E");
   pointer-events:none;
+  mix-blend-mode:overlay;
 }
 
-.core{
+/* ===== ЯДРО ПЛАНЕТИ ===== */
+.core-shell{
   position:relative;
-  width:140px;
-  height:140px;
+  width:260px;
+  height:260px;
   border-radius:50%;
-  background:#000;
+  background:
+    radial-gradient(circle at 30% 30%,
+      rgba(120,255,220,.25),
+      rgba(0,0,0,.9) 60%);
   box-shadow:
-    0 0 calc(40px + var(--instability)*140px)
-    rgba(255,50,50,var(--instability));
+    inset 0 0 80px rgba(0,0,0,.9),
+    0 0 calc(80px + var(--entropy)*180px)
+    rgba(255,80,80,var(--entropy));
+  animation:planet-breath 6s infinite ease-in-out;
 }
 
-.core::before{
-  content:"";
+@keyframes planet-breath{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(calc(1 + var(--entropy)*.04))}
+}
+
+/* ===== ЯДРО ІІ ===== */
+.ai-core{
   position:absolute;
-  inset:-10px;
+  inset:70px;
   border-radius:50%;
-  border:1px solid rgba(255,255,255,.8);
+  background:
+    radial-gradient(circle,
+      rgba(160,255,240,.9),
+      rgba(30,120,110,.4),
+      #000 70%);
+  box-shadow:
+    0 0 40px rgba(140,255,230,.6);
+  animation:ai-pulse 2.5s infinite ease-in-out;
 }
 
+@keyframes ai-pulse{
+  0%,100%{opacity:.7}
+  50%{opacity:1}
+}
+
+/* ===== НЕЙРО-ТРІЩИНИ ===== */
 .crack{
   position:absolute;
   width:2px;
-  height:160px;
+  height:200px;
   background:linear-gradient(
     transparent,
-    rgba(255,80,80,.9),
+    rgba(255,120,120,.9),
+    rgba(120,255,220,.9),
     transparent
   );
-  opacity:var(--instability);
+  top:30px;
+  left:50%;
   transform-origin:center;
+  opacity:var(--entropy);
 }
 
 .c1{transform:rotate(15deg);}
-.c2{transform:rotate(60deg);}
-.c3{transform:rotate(120deg);}
-.c4{transform:rotate(170deg);}
+.c2{transform:rotate(55deg);}
+.c3{transform:rotate(95deg);}
+.c4{transform:rotate(140deg);}
+.c5{transform:rotate(175deg);}
 
-.ghost{
+/* ===== НЕЙРО-МЕРЕЖА ===== */
+.synapse{
   position:absolute;
-  width:140px;
-  height:140px;
+  inset:-20px;
   border-radius:50%;
-  border:1px solid cyan;
-  opacity:calc(var(--instability)*.7);
-  transform:
-    translate(calc(var(--ab)*1px),calc(var(--ab)*-1px));
+  border:1px dashed rgba(120,255,220,.3);
+  animation:spin 20s linear infinite;
+  opacity:.4;
 }
 
-.ghost.red{
-  border-color:red;
-  transform:
-    translate(calc(var(--ab)*-1px),calc(var(--ab)*1px));
+@keyframes spin{
+  to{transform:rotate(360deg)}
 }
 
+/* ===== ДУМКИ СИСТЕМИ ===== */
 .thought{
   position:fixed;
-  bottom:18%;
+  bottom:14%;
   width:100%;
   text-align:center;
-  letter-spacing:.3em;
-  font-size:.8rem;
+  letter-spacing:.35em;
+  font-size:.75rem;
   opacity:0;
-  transition:opacity 1s;
+  transition:opacity 1.2s;
   mix-blend-mode:difference;
+}
+
+/* ===== СВІТЛОВІ ІМПУЛЬСИ ===== */
+.flash{
+  position:fixed;
+  inset:0;
+  background:white;
+  opacity:0;
+  pointer-events:none;
 }
 </style>
 </head>
@@ -130,17 +166,18 @@ body{
 <body>
 
 <div class="vignette"></div>
-<div class="grain"></div>
+<div class="noise"></div>
+<div class="flash" id="flash"></div>
 
-<div id="world">
-  <div class="ghost red"></div>
-  <div class="ghost"></div>
-
-  <div class="core" id="core">
+<div id="universe">
+  <div class="core-shell" id="planet">
+    <div class="synapse"></div>
     <div class="crack c1"></div>
     <div class="crack c2"></div>
     <div class="crack c3"></div>
     <div class="crack c4"></div>
+    <div class="crack c5"></div>
+    <div class="ai-core" id="ai"></div>
   </div>
 </div>
 
@@ -149,6 +186,7 @@ body{
 <script>
 const root=document.documentElement;
 const thought=document.getElementById("thought");
+const flash=document.getElementById("flash");
 
 let entropy=0;
 let hold=false;
@@ -161,37 +199,41 @@ function say(text,time=3000){
   if(time>0) setTimeout(()=>thought.style.opacity=0,time);
 }
 
-setTimeout(()=>say("рівновага зникла"),1000);
-setTimeout(()=>say("ядро тріщить"),4000);
-setTimeout(()=>say("утримуй",0),7000);
+/* НАРАТИВ */
+setTimeout(()=>say("ядро пробуджується"),1000);
+setTimeout(()=>say("планета більше не мовчить"),4500);
+setTimeout(()=>say("утримуй баланс",0),8000);
 
+/* ВЗАЄМОДІЯ */
 document.addEventListener("mousedown",()=>hold=true);
-document.addEventListener("touchstart",()=>hold=true,{passive:false});
+document.addEventListener("touchstart",e=>{e.preventDefault();hold=true},{passive:false});
 document.addEventListener("mouseup",()=>hold=false);
 document.addEventListener("touchend",()=>hold=false);
 
+/* ФІЗИКА */
 function loop(){
   if(stabilized) return;
-  t+=0.03;
+  t+=0.025;
 
-  entropy+=hold?-0.8:0.4;
+  entropy+=hold?-0.9:0.45;
   entropy=Math.max(0,Math.min(100,entropy));
-
   const k=entropy/100;
-  const dx=Math.sin(t)*60*k;
-  const dy=Math.cos(t*1.3)*60*k;
-  const r=Math.sin(t*.7)*15*k;
 
-  root.style.setProperty("--instability",k);
-  root.style.setProperty("--dx",dx+"px");
-  root.style.setProperty("--dy",dy+"px");
-  root.style.setProperty("--rot",r+"deg");
-  root.style.setProperty("--ab",Math.abs(dx)+Math.abs(dy));
+  const sx=Math.sin(t)*50*k;
+  const sy=Math.cos(t*1.4)*50*k;
+  const r=Math.sin(t*.6)*12*k;
+
+  root.style.setProperty("--entropy",k);
+  root.style.setProperty("--shakeX",sx+"px");
+  root.style.setProperty("--shakeY",sy+"px");
+  root.style.setProperty("--rotate",r+"deg");
 
   if(hold && entropy<1){
     stabilized=true;
-    say("дрифт зупинено",4000);
-    setTimeout(()=>say("ти тримаєш світ",0),4500);
+    flash.style.opacity=1;
+    setTimeout(()=>flash.style.opacity=0,120);
+    say("ядро прийняло тебе",4000);
+    setTimeout(()=>say("ти — свідомість планети",0),4500);
   }
 
   requestAnimationFrame(loop);
