--- a/index.html
+++ b/index.html
@@ -2,244 +2,216 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>TEQRA | Planetary Core</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>TEQRA :: Zero Core</title>
 
 <style>
 :root{
-  --entropy:0;
-  --shakeX:0px;
-  --shakeY:0px;
-  --rotate:0deg;
-  --pulse:1;
+  --void:#030304;
+  --lava:255,90,40;
+  --cold:120,220,255;
+  --fracture:1;
 }
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  user-select:none;
-  cursor:none;
-}
-
+*{margin:0;padding:0;box-sizing:border-box;user-select:none}
 body{
-  background:#070809;
+  background:radial-gradient(circle at center,#08080a 0%,#000 70%);
   height:100vh;
   overflow:hidden;
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:system-ui, sans-serif;
-  color:rgba(255,255,255,.75);
+  font-family:monospace;
+  color:rgba(255,255,255,.6);
 }
 
-#universe{
+/* ПРОСТІР */
+#space{
   position:absolute;
   inset:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  transform:
-    translate(var(--shakeX),var(--shakeY))
-    rotate(var(--rotate));
+  background:
+    radial-gradient(circle at 20% 30%,rgba(255,255,255,.05),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(255,255,255,.04),transparent 40%);
+  animation:spaceDrift 40s linear infinite;
+}
+@keyframes spaceDrift{
+  from{transform:translate(0,0)}
+  to{transform:translate(-50px,30px)}
 }
 
-.vignette{
-  position:fixed;
-  inset:0;
-  background:radial-gradient(circle,transparent 35%,#000 90%);
-  opacity:calc(.25 + var(--entropy));
-  pointer-events:none;
-}
-
-.noise{
-  position:fixed;
-  inset:0;
-  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='.2'/%3E%3C/svg%3E");
-  pointer-events:none;
-  mix-blend-mode:overlay;
-}
-
-/* ===== ЯДРО ПЛАНЕТИ ===== */
-.core-shell{
+/* ЯДРО */
+#coreWrap{
   position:relative;
-  width:260px;
-  height:260px;
+  width:280px;
+  height:280px;
+  filter:drop-shadow(0 0 80px rgba(var(--lava),.5));
+}
+
+/* ПЛАНЕТА */
+#planet{
+  width:100%;
+  height:100%;
   border-radius:50%;
   background:
-    radial-gradient(circle at 30% 30%,
-      rgba(120,255,220,.25),
-      rgba(0,0,0,.9) 60%);
-  box-shadow:
-    inset 0 0 80px rgba(0,0,0,.9),
-    0 0 calc(80px + var(--entropy)*180px)
-    rgba(255,80,80,var(--entropy));
-  animation:planet-breath 6s infinite ease-in-out;
+    radial-gradient(circle at 30% 30%,#444,#111 60%,#000 100%);
+  position:relative;
+  overflow:hidden;
+  animation:planetPulse 2s infinite ease-in-out;
+}
+@keyframes planetPulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.02)}
+  100%{transform:scale(1)}
 }
 
-@keyframes planet-breath{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(calc(1 + var(--entropy)*.04))}
-}
-
-/* ===== ЯДРО ІІ ===== */
-.ai-core{
-  position:absolute;
-  inset:70px;
-  border-radius:50%;
-  background:
-    radial-gradient(circle,
-      rgba(160,255,240,.9),
-      rgba(30,120,110,.4),
-      #000 70%);
-  box-shadow:
-    0 0 40px rgba(140,255,230,.6);
-  animation:ai-pulse 2.5s infinite ease-in-out;
-}
-
-@keyframes ai-pulse{
-  0%,100%{opacity:.7}
-  50%{opacity:1}
-}
-
-/* ===== НЕЙРО-ТРІЩИНИ ===== */
+/* ТРІЩИНИ */
 .crack{
   position:absolute;
-  width:2px;
-  height:200px;
-  background:linear-gradient(
-    transparent,
-    rgba(255,120,120,.9),
-    rgba(120,255,220,.9),
-    transparent
-  );
-  top:30px;
-  left:50%;
-  transform-origin:center;
-  opacity:var(--entropy);
+  inset:0;
+  background:
+    repeating-linear-gradient(
+      120deg,
+      transparent 0%,
+      transparent 46%,
+      rgba(var(--lava),.8) 48%,
+      transparent 50%
+    );
+  mix-blend-mode:screen;
+  animation:crackShift 3s infinite linear;
+}
+@keyframes crackShift{
+  from{background-position:0 0}
+  to{background-position:300px 200px}
 }
 
-.c1{transform:rotate(15deg);}
-.c2{transform:rotate(55deg);}
-.c3{transform:rotate(95deg);}
-.c4{transform:rotate(140deg);}
-.c5{transform:rotate(175deg);}
-
-/* ===== НЕЙРО-МЕРЕЖА ===== */
-.synapse{
+/* ЛАВА */
+#lava{
   position:absolute;
-  inset:-20px;
+  inset:0;
+  background:
+    radial-gradient(circle at center,
+      rgba(var(--lava),.9),
+      rgba(var(--lava),.2) 40%,
+      transparent 65%);
+  opacity:.7;
+  animation:lavaMove 1.5s infinite alternate;
+}
+@keyframes lavaMove{
+  from{transform:scale(1)}
+  to{transform:scale(1.1)}
+}
+
+/* ІІ-КІЛЬЦЯ */
+.aiRing{
+  position:absolute;
+  inset:-30px;
   border-radius:50%;
-  border:1px dashed rgba(120,255,220,.3);
-  animation:spin 20s linear infinite;
+  border:1px dashed rgba(var(--cold),.6);
+  animation:spin 18s linear infinite;
+}
+.aiRing:nth-child(2){
+  inset:-55px;
+  animation-duration:28s;
   opacity:.4;
 }
-
 @keyframes spin{
   to{transform:rotate(360deg)}
 }
 
-/* ===== ДУМКИ СИСТЕМИ ===== */
-.thought{
-  position:fixed;
-  bottom:14%;
+/* ДУМКИ */
+#thought{
+  position:absolute;
+  bottom:15%;
   width:100%;
   text-align:center;
-  letter-spacing:.35em;
   font-size:.75rem;
+  letter-spacing:.3em;
   opacity:0;
-  transition:opacity 1.2s;
-  mix-blend-mode:difference;
+  transition:opacity 1s;
 }
 
-/* ===== СВІТЛОВІ ІМПУЛЬСИ ===== */
-.flash{
-  position:fixed;
-  inset:0;
-  background:white;
-  opacity:0;
-  pointer-events:none;
+/* РОЗПАД СВІТУ */
+body.chaos #coreWrap{
+  animation:worldShake .1s infinite;
+}
+@keyframes worldShake{
+  0%{transform:translate(0,0)}
+  50%{transform:translate(3px,-2px)}
+  100%{transform:translate(-2px,3px)}
 }
 </style>
 </head>
 
-<body>
+<body class="chaos">
 
-<div class="vignette"></div>
-<div class="noise"></div>
-<div class="flash" id="flash"></div>
+<div id="space"></div>
 
-<div id="universe">
-  <div class="core-shell" id="planet">
-    <div class="synapse"></div>
-    <div class="crack c1"></div>
-    <div class="crack c2"></div>
-    <div class="crack c3"></div>
-    <div class="crack c4"></div>
-    <div class="crack c5"></div>
-    <div class="ai-core" id="ai"></div>
+<div id="coreWrap">
+  <div class="aiRing"></div>
+  <div class="aiRing"></div>
+
+  <div id="planet">
+    <div id="lava"></div>
+    <div class="crack"></div>
   </div>
 </div>
 
-<div class="thought" id="thought"></div>
+<div id="thought"></div>
 
 <script>
-const root=document.documentElement;
-const thought=document.getElementById("thought");
-const flash=document.getElementById("flash");
-
-let entropy=0;
-let hold=false;
-let t=0;
+const thought=document.getElementById('thought');
+let entropy=80;
+let holding=false;
 let stabilized=false;
 
 function say(text,time=3000){
   thought.textContent=text;
   thought.style.opacity=1;
-  if(time>0) setTimeout(()=>thought.style.opacity=0,time);
+  if(time>0)setTimeout(()=>thought.style.opacity=0,time);
 }
 
-/* НАРАТИВ */
-setTimeout(()=>say("ядро пробуджується"),1000);
-setTimeout(()=>say("планета більше не мовчить"),4500);
-setTimeout(()=>say("утримуй баланс",0),8000);
+setTimeout(()=>say("структура планети порушена"),1000);
+setTimeout(()=>say("алгоритм більше не сходиться"),4500);
+setTimeout(()=>say("потрібна зовнішня константа",0),8000);
 
-/* ВЗАЄМОДІЯ */
-document.addEventListener("mousedown",()=>hold=true);
-document.addEventListener("touchstart",e=>{e.preventDefault();hold=true},{passive:false});
-document.addEventListener("mouseup",()=>hold=false);
-document.addEventListener("touchend",()=>hold=false);
+/* УТРИМАННЯ */
+document.addEventListener('mousedown',holdStart);
+document.addEventListener('touchstart',holdStart,{passive:false});
+document.addEventListener('mouseup',holdEnd);
+document.addEventListener('touchend',holdEnd);
+
+function holdStart(e){
+  e.preventDefault();
+  holding=true;
+  say("утримуй ядро",0);
+}
+function holdEnd(){
+  holding=false;
+  if(!stabilized)say("втрата стабільності");
+}
 
 /* ФІЗИКА */
-function loop(){
-  if(stabilized) return;
-  t+=0.025;
+setInterval(()=>{
+  if(stabilized)return;
 
-  entropy+=hold?-0.9:0.45;
+  entropy += holding ? -1.2 : 0.8;
   entropy=Math.max(0,Math.min(100,entropy));
-  const k=entropy/100;
 
-  const sx=Math.sin(t)*50*k;
-  const sy=Math.cos(t*1.4)*50*k;
-  const r=Math.sin(t*.6)*12*k;
+  document.documentElement.style.setProperty('--fracture',entropy/100);
 
-  root.style.setProperty("--entropy",k);
-  root.style.setProperty("--shakeX",sx+"px");
-  root.style.setProperty("--shakeY",sy+"px");
-  root.style.setProperty("--rotate",r+"deg");
-
-  if(hold && entropy<1){
-    stabilized=true;
-    flash.style.opacity=1;
-    setTimeout(()=>flash.style.opacity=0,120);
-    say("ядро прийняло тебе",4000);
-    setTimeout(()=>say("ти — свідомість планети",0),4500);
+  if(entropy<=1 && holding){
+    stabilize();
   }
+},40);
 
-  requestAnimationFrame(loop);
+function stabilize(){
+  stabilized=true;
+  document.body.classList.remove('chaos');
+  document.getElementById('lava').style.background=
+    'radial-gradient(circle at center,rgba(120,220,255,.8),transparent 60%)';
+  say("ядро стабілізовано",3000);
+  setTimeout(()=>say("резонанс зафіксовано",0),3500);
 }
-
-loop();
 </script>
 
 </body>
